--- a/微积分.md
+++ b/微积分.md
@@ -16,6 +16,26 @@
 
 ![](https://gss3.bdstatic.com/7Po3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D79/sign=c54600db40fbfbedd85934767af057f7/eaf81a4c510fd9f948c3c48d2e2dd42a2934a47a.jpg)
 
+ 
 
+对于一个变量x的实值函数f，f在闭区间[a,b]上的积分，dx表示x是f中要进行积分的变量。
+
+### 定积分
+
+若定积分存在，则它是一个数值（曲变形的面积），而不定积分是一个函数表达式，仅有计算关系，没有存在关系。一个连续函数一定存在定积分和不定积分。
+
+若只有有限个间断点，则定积分存在。
+
+若有跳跃间断点，则原函数一定不存在，则不定积分也一定不存在，因为不定积分就是已知导函数求原函数。
+
+如果一个倒数有原函数，那么它就有无线多个原函数。
+
+- 定义：设函数f(x)在区间[a,b]上连续，将区间[a,b]分成n个子区间可知各区间的长度依次是：△x1=x1-x0，在每个子区间(xi-1,xi\]中任取一点ξi（1,2,...,n），作和式
+
+  ![](https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D84/sign=98628d91d01b0ef468e8955adcc47662/622762d0f703918f9c4cf875533d269758eec4f4.jpg)
+
+。该式叫做积分和，λ=max{△x1, △x2, …, △xn}（即λ是最大的区间长度），如果λ→0时，积分和的极限存在，则这个极限叫做函数f(x)在区间[a,b]的定积分。并称函数f(x)在区间\[a,b\]上可积。
+
+- 其中：a叫做积分下限，b叫做积分上限，区间\[a, b\]叫做积分区间，函数f(x)叫做被积函数，x叫做积分变量，f(x)dx 叫做被积表达式，∫ 叫做积分号。
 
 
